
* The "Documentation" panel supports plain text files again, notably
"jedit-changes". This was broken in Isabelle2022, Isabelle2023,
Isabelle2024.

* Text rendering performance on macOS may be improved by using old
OpenGL instead of new Metal. This is controlled by the java command-line
option "-Dsun.java2d.metal=false", which is now the default.

* Update to jEdit 5.7.0, the latest release.


*** Isabelle/VSCode Prover IDE ***

* General improvements: Persistent decorations for PIDE markup, correct
font and formatting in panels, and proper completions. Moreover, the
PIDE extension of the LSP now features additional protocol messages
(e.g. to obtain the set of Isabelle symbols) and more fine-grained
control for recoding of Unicode symbols.

* Active "sendback" markup can now be used via LSP code actions, e.g. to
insert proof methods from Sledgehammer output.

* Relevant Isabelle options can now be overriden from the
Isabelle/VSCode extension settings.


*** Document preparation ***

* LaTeX output from printed entities (types, terms, thms) now contains
additional markup as follows:

  tclass    -- type class "a"
  tconst    -- type constructor "a"
  tfree     -- free type variable "'a"
  tvar      -- schematic type variable "?'a"
  const     -- constant "a"
  free      -- free variable "a"
  bound     -- bound variable "a"
  skolem    -- skolem variable "a"
  var       -- schematic variable "?a"

These markup names are turned into LaTeX macros using the prefix "\isa",
e.g. "\isaconst{...}" for "const". By default, these macros have no
effect, but may be defined in root.tex like this:

  \renewcommand{\isatconst}[1]{{\color{darkgray}#1}}
  \renewcommand{\isaconst}[1]{\textsl{\color{darkgray}#1}}

* LaTeX presentation of outer syntax keywords now distinguishes
keyword1, keyword2, keyword3 more carefully. This allows to imitate
Isabelle/jEdit rendering like this:

  \renewcommand{\isacommand}[1]{\isakeywordONE{#1}}