@@ -8,7 +8,7 @@ e-3.1-1
 elm-0.19.1
 easychair-3.5
 eptcs-1.7.0
-flatlaf-2.6
+flatlaf-3.5.4
 foiltex-2.1.4b
 idea-icons-20210508
 isabelle_fonts-20241227
