@@ -178,6 +178,7 @@ class Admin_Tools extends Isabelle_Scala_Tools(
   Component_EPTCS.isabelle_tool,
   Component_Easychair.isabelle_tool,
   Component_Elm.isabelle_tool,
+  Component_FlatLaf.isabelle_tool,
   Component_Foiltex.isabelle_tool,
   Component_Fonts.isabelle_tool,
   Component_HOL_Light.isabelle_tool,
